--- a/vbox/requirements.txt
+++ b/vbox/requirements.txt
@@ -1,11 +1,21 @@
+anyio==3.6.2
+certifi==2022.12.7
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.3
+Flask-Cors==3.0.10
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.4
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+pocketbase==0.1.2
 pyvbox==2.1.1
-virtualbox==2.1.1
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
 Werkzeug==2.2.3
 zipp==3.13.0
