--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"exposed": "vite dev -- --host --port 3333"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
